Added Opening Message to Copy in Website with appropriate HTML markup.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   <title>TVS Pharmacy</title>
 </head>
 <body>
-  
+  <div class="content">
+    <header class="app-header">
+      <div class="container">
+        <img class="logo" src="https://i.ibb.co/G5jyXN9/logo.png" alt="" />
+        <input type="text" class="search" placeholder="Search...">    
+      </div>
+    </header>
+
+    <div class="subheader">
+      <div>
+        <p>Now delivering Rx + more</p>
+        <p>Find out now <i class="fa fa-chevron-right"></i></p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
